# miniredis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  buf.c  cli.c  event.c  event.h  hashmap.c  hashmap.h  match.c  match.h  miniredis.c  miniredis.h
include/: buf.h  hashmap.h  match.h
src/: buf.c  hashmap.c  match.c
test/: buf_test.c  hashmap_test.c  match_test.c
